--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 
 .avatar-img {
   height: 250px;
-  padding: 5%;
+  padding: 4%;
   border-radius: 50%;
 }
 
@@ -70,21 +70,32 @@
   position: fixed;
   background-color:rgb(196, 225, 235);
   width: 100%;
-  height: 80%;
+  height: 90%;
   justify-content: center;
   padding-top: 2em;
 }
 
 .contact-grid {
   text-align: center;
-  justify-content: center;
+  justify-content: left;
   width: 50%;
-  height: 450px;
+  height:450px;
   color: black;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  overflow: auto;
 }
 
-.contact-grid hr {
+.about-grid {
+  text-align: center;
+  justify-content: center;
+  width: 50%;
+  height:600px;
+  color: black;
+  margin-bottom: 20px;
+  overflow: auto;
+}
+
+.contact-grid hr, .about-grid hr{
   border-top: 2px solid black;
   width: 50%;
   margin: auto;
@@ -102,18 +113,19 @@
   padding-top: 15px;
   text-align: left;
   line-height: 2rem;
-  
+  overflow: hidden;  
 }
 
 /* footer */
 
 .footer-color {
-  background: #00F260;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #348F50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #56B4D3, #348F50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #56B4D3, #348F50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   bottom:0;
   right:0;
   height:1%;
   position:relative;
+  z-index: 99;
 }
